@@ -3,6 +3,10 @@ Thu May 16 13:05:13 CEST 2002 Pekka Riikonen <priikone@silcnet.org>
 	* The nickname argument to watch notify can be optional.
 	  Fixes a crash in server.  Affected file silcd/packet_send.c.
 
+	* Remove the client entry from cache if the WATCH notify type
+	  is KILLED, SERVER_SIGNOFF or SIGNOFF.  Affected file is
+	  lib/silcclient/client_notify.c.
+
 Wed May 15 19:01:42 EEST 2002 Pekka Riikonen <priikone@silcnet.org>
 
 	* Merged with Irssi CVS for Irssi SILC client.
